fixed more stuff

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <main class="container">
       
     <header id="main">
+      <div class="header-image">
+        <img src="images/header.jpg" alt=""/>
+      </div>
       <h1>New Company Inc.</h1>
       <p>Creating a better workspace by transforming the office paradigm. We're helping employees make their mark on the 
         world through effective workspace management.</p>
